tests/baselines/reference/missingRequiredDeclare.d.errors.txt
tests/cases/compiler/missingRequiredDeclare.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
tests/cases/compiler/missingRequiredDeclare.d.ts(1,9): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/missingRequiredDeclare.d.ts (2 errors) ====
    var x = 1;
    ~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
            ~
!!! error TS1039: Initializers are not allowed in ambient contexts.